--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="theme">
             <span class="theme_span">Theme</span>
             <select class="choice">
-                <option value="light">Light</option>
-                <option value="dark">Dark</option>
+                <option value="light" id="light">Light</option>
+                <option value="dark" id="dark">Dark</option>
             </select>
         </div>
     </nav>
